--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
   color: inherit;
   border: 0;
   text-decoration: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .header {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
   top: 0;
   left: 0;
   position: fixed;
@@ -18,14 +19,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  box-shadow: 0 -1px 10px #e0e0e0;
+  box-shadow: 0 -1px 10px #e0e0e081;
   padding: 1rem 3rem;
   color: black;
-  font-weight: 500;
   z-index: 10;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.849);
 
 }
+
 
 .header button {
   padding: 1rem 2rem;
@@ -48,7 +49,171 @@ main {
 
 
 .hero {
+  padding: 7% 15%;
   background-image: url('chicken.png');
-  height: 30rem;
+  height: 28.5rem;
   background-size: contain;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  font-family: 'Fredoka one', sans-serif;
+
+}
+
+.hero-head {
+  width: 34%;
+  margin-bottom: 3%;
+
+}
+
+.hero-head h1 {
+  font-family: 'Fredoka one', sans-serif;
+  margin-bottom: 1rem;
+}
+
+.hero-head p {
+  font-family: 'Poppins', sans-serif;
+  color: grey;
+}
+
+.hero-video {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 35%;
+}
+
+.hero-menus {
+  border: 1.5px rgb(248, 78, 78) solid;
+  width: fit-content;
+  padding: 3px;
+  border-radius: 15px;
+  width: 9rem;
+}
+
+.hero-menus div {
+  position: relative;
+  background-color: rgb(254, 86, 86);
+  padding: 0.6rem 0.2rem;
+  text-align: center;
+  border-radius: 10px;
+  left: -0.6rem;
+  width: 9rem;
+  height: fit-content;
+}
+
+.hero-controls {
+  border: 1.5px solid white;
+  padding: 1rem 1.3rem;
+  border-radius: 100%;
+}
+
+.weekly-special {
+  background-color: rgba(0, 0, 0, 0.548);
+  position: relative;
+  border: 2px solid #FFC222;
+  border-radius: 1rem;
+  width: 40%;
+  padding: 1rem;
+  float: right;
+  height: 50%;
+  bottom: 30%;
+  left: 60%;
+  letter-spacing: 1px;
+}
+
+.weekly-special div {
+  float: left;
+  top: -1rem;
+}
+
+.weekly-special img {
+  width: 7rem;
+  float: right;
+  position: relative;
+  top: -90%;
+}
+
+.weekly-special-badge {
+  position: relative;
+  background-color: rgb(241, 87, 87);
+  width: fit-content;
+  font-family: 'Poppins', sans-serif;
+  top: -30%;
+  left: 50%;
+  padding: 2%;
+  border-radius: 5px;
+  letter-spacing: -0.5px;
+}
+
+.weekly-special h3 {
+  position: relative;
+  top: -10%;
+}
+
+.dots {
+  position: relative;
+  top: 15%;
+  left: -5%;
+
+}
+
+.dots img {
+  width: 4rem;
+}
+
+.about {
+  margin: 0 25% 0 10%;
+  padding-top: 5%;
+  font-family: 'Poppins', sans-serif;
+  color: #000000;
+  display: flex;
+  width: 80%;
+}
+
+.left-about {
+  margin: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 15rem;
+}
+
+.right-about {
+  margin: 2rem
+}
+
+.left-about h5 {
+  color: rgb(253, 83, 83);
+  font-weight: 100;
+  font-family: 'Fredoka one', sans-serif;
+}
+
+.left-about h1 {
+  font-family: 'Fredoka one', sans-serif;
+  font-weight: 500;
+}
+
+.director {
+  display: flex;
+  margin: 2rem 0;
+}
+
+.director h2 {
+  font-family: 'Fredoka one', sans-serif;
+  font-weight: 100;
+}
+
+.details {
+  margin-left: 7%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 4rem;
+}
+
+.details h6 {
+  font-weight: 500;
 }
