--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ h6 {
   font-weight: 700;
   top: 0;
   left: 0;
-  position: fixed;
+  position: absolute;
   width: 100%;
   display: flex;
   flex-direction: row;
