changed style oh hero to tailwindcss

--- a/src/App.css
+++ b/src/App.css
@@ -1,756 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  color: inherit;
-  border: 0;
-  text-decoration: none;
-  font-family: 'Fredoka one', sans-serif;
-}
-
-p {
-  font-family: 'Poppins', sans-serif;
-}
-
-h6 {
-  color: rgb(241, 87, 87);
-}
-
-a {
-  font-family: 'Poppins', sans-serif;
-}
-
-input {
-  color: black;
-  font-family: "Poppins", sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 100;
-}
-
-.header {
-  font-weight: 700;
-  top: 0;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  box-shadow: 0 -1px 10px #e0e0e081;
-  padding: 1rem 3rem;
-  color: black;
-  z-index: 10;
-  background-color: rgba(255, 255, 255, 0.932);
-}
-
-
-.header button {
-  font-family: 'Poppins', sans-serif;
-  padding: 1rem 2rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  background-color: #FFC222;
-  color: white;
-  font-size: 1rem;
-  font-weight: 500;
-  margin-left: 4rem;
-}
-
-.logo {
-  margin-left: 4rem;
-}
-
-main {
-  margin-top: 9%;
-}
-
-
-.hero {
-  padding: 7% 15%;
-  background-image: url('/chicken.png');
-  height: 28.5rem;
-  background-size: contain;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  font-family: 'Fredoka one', sans-serif;
-
-}
-
-.hero-head {
-  width: 34%;
-  margin-bottom: 3%;
-
-}
-
-.hero-head h1 {
-  margin-bottom: 1rem;
-}
-
-.hero-head p {
-  color: grey;
-}
-
-.hero-video {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 35%;
-}
-
-.hero-menus {
-  border: 1.5px rgb(248, 78, 78) solid;
-  width: fit-content;
-  padding: 3px;
-  border-radius: 15px;
-  width: 9rem;
-}
-
-.hero-menus div {
-  position: relative;
-  background-color: rgb(254, 86, 86);
-  padding: 0.6rem 0.2rem;
-  text-align: center;
-  border-radius: 10px;
-  left: -0.6rem;
-  width: 9rem;
-  height: fit-content;
-}
-
-.hero-controls {
-  border: 1.5px solid white;
-  padding: 1rem 1.3rem;
-  border-radius: 100%;
-}
-
-.weekly-special {
-  background-color: rgba(0, 0, 0, 0.548);
-  position: relative;
-  border: 2px solid #FFC222;
-  border-radius: 1rem;
-  width: 40%;
-  padding: 1rem;
-  float: right;
-  height: 50%;
-  bottom: 30%;
-  left: 60%;
-  letter-spacing: 1px;
-}
-
-.weekly-special div {
-  float: left;
-  top: -1rem;
-}
-
-.weekly-special img {
-  width: 7rem;
-  float: right;
-  position: relative;
-  top: -90%;
-}
-
-.weekly-special-badge {
-  position: relative;
-  background-color: rgb(241, 87, 87);
-  width: fit-content;
-  font-family: 'Poppins', sans-serif;
-  top: -30%;
-  left: 50%;
-  padding: 2%;
-  border-radius: 5px;
-  letter-spacing: -0.5px;
-}
-
-.weekly-special h3 {
-  position: relative;
-  top: -10%;
-}
-
-.dots {
-  position: relative;
-  top: 15%;
-  left: -5%;
-
-}
-
-.dots img {
-  width: 4rem;
-}
-
-.about {
-  margin: 0 25% 0 10%;
-  padding-top: 5%;
-  font-family: 'Poppins', sans-serif;
-  color: #000000;
-  display: flex;
-  width: 80%;
-}
-
-.left-about {
-  margin: 0 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 15rem;
-}
-
-.right-about {
-  margin: 2rem
-}
-
-.left-about h5 {
-  color: rgb(253, 83, 83);
-  font-weight: 100;
-}
-
-.left-about h1 {
-
-  font-weight: 500;
-}
-
-.director {
-  display: flex;
-  margin: 2rem 0;
-}
-
-.director h2 {
-  font-weight: 100;
-}
-
-.details {
-  margin-top: 2%;
-  margin-left: 7%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 3rem;
-}
-
-.details h6 {
-  font-weight: 500;
-}
-
-.products {
-  display: flex;
-  justify-content: space-around;
-  font-size: 1rem;
-  margin: 0 5% 0 10%;
-}
-
-.product-1 {
-  background-image: url('/img-box1.png');
-  background-size: contain;
-  height: 25.4rem;
-  width: 20rem;
-  padding: 0.8em 1rem;
-}
-
-.products div div {
-  border: 3px solid #FFC222;
-  height: 100%;
-  border-radius: 1.2rem;
-}
-
-.products div h1 {
-  text-align: center;
-  position: relative;
-  background-color: #FFC222;
-  top: 88%;
-  padding: 0.5rem;
-  border-radius: 1rem;
-  font-size: 1.5rem;
-}
-
-.product-2 {
-  position: relative;
-  background-image: url('/img-box2.png');
-  background-size: contain;
-  height: 25.4rem;
-  width: 20rem;
-  padding: 0.8em 1rem;
-  top: 5rem;
-}
-
-.product-3 {
-  background-image: url('/img-box3.png');
-  background-size: contain;
-  height: 25.3rem;
-  width: 20rem;
-  padding: 0.8rem 1rem;
-}
-
-.samples {
-  display: flex;
-  flex-direction: row;
-  margin: 10rem 15rem;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.samples img {
-  width: 3rem;
-}
-
-.sample-container {
-  border: 0.25rem rgb(174, 173, 173) solid;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  padding: 1.7rem 2rem;
-  border-radius: 1rem;
-}
-
-.pentagon {
-  background-color: red;
-  color: white;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  padding: 2rem 2rem;
-  border-radius: 1rem;
-  position: relative;
-}
-
-.pentagon::after {
-  content: '';
-  position: absolute;
-  bottom: -10px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 0;
-  height: 0rem;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-top: 10px solid #F44336;
-}
-
-.BBQ {
-  font-weight: 500;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 1rem 0rem 0 8rem;
-  height: 30rem;
-}
-
-.BBQ img {
-  width: 25rem;
-}
-
-.BBQ-container {
-  position: relative;
-  background-color: rgb(236, 246, 246);
-  display: flex;
-  left: -13rem;
-  top: -1rem;
-  flex-direction: column;
-  padding: 2rem 5rem;
-  margin: 1rem 1rem;
-  border-radius: 1rem;
-  justify-content: space-between;
-  height: fit-content;
-  z-index: -1;
-}
-
-.BBQ-container div {
-  margin-left: 10rem;
-}
-
-.BBQ div h2 {
-  font-size: 2rem;
-  margin: 0.5rem 10rem;
-  font-weight: 400;
-}
-
-.BBQ-container h6 {
-  font-weight: 500;
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-
-.BBQ-container p {
-  color: grey;
-  font-weight: 500;
-  font-size: 0.7rem;
-  margin-bottom: 1rem;
-}
-
-.discover-menu {
-  display: flex;
-  flex-direction: column;
-}
-
-.discover-menu h2 {
-  text-align: center;
-  position: relative;
-  font-size: 2rem;
-  margin: 2rem 0;
-  font-weight: 100;
-  padding: .7rem 0;
-}
-
-.discover-menu h2::after {
-  content: '';
-  position: absolute;
-  left: 45%;
-  bottom: -3px;
-  width: 8rem;
-  border-bottom: 7px solid #FFC222;
-  border-radius: 1rem;
-  /* Customize thickness, style, and color */
-}
-
-.discover-menu-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin: 0 10rem;
-}
-
-.discover-menu-container div {
-  margin: 0 1rem;
-}
-
-.menu-badge {
-  position: relative;
-  background-color: #FFC222;
-  border-radius: 50%;
-  width: fit-content;
-  padding: 2rem;
-  text-align: center;
-  color: black;
-  top: 5rem;
-  left: -2rem;
-}
-
-.menu-badge h1 {
-  color: red;
-  font-size: 1.5rem;
-}
-
-.img1 {
-  background-image: url('/banner1.png');
-  background-repeat: none;
-  background-position: center;
-  border-radius: 2rem;
-  color: white;
-  background-size: cover;
-  padding: 2rem 5rem;
-}
-
-.img2 {
-  background-image: url('/banner2.png');
-  background-repeat: none;
-  background-position: center;
-  border-radius: 2rem;
-  color: white;
-  background-size: cover;
-  padding: 2rem 5rem;
-}
-
-.img2 p,
-.img1 p {
-  color: rgb(184, 182, 182);
-}
-
-.menu-form {
-  display: flex;
-  flex-direction: row;
-  margin: 5rem;
-  background-color: rgb(250, 73, 73);
-  color: white;
-  justify-content: space-between;
-  padding: 2rem 5rem;
-  border-radius: 1rem;
-}
-
-.menu-form form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 2rem;
-}
-
-.inputs {
-  display: flex;
-  flex-direction: row;
-  margin-left: 0.4rem;
-}
-
-::placeholder {
-  font-family: 'Poppins', sans-serif;
-  color: #4c4a4a;
-}
-
-.input1,
-.input2 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 0.7rem;
-}
-
-
-.input1 input {
-  padding: 1rem 3rem;
-  margin: 0.2rem 0;
-  border-radius: 0.5rem;
-  width: auto;
-}
-
-.input2 input {
-  padding: 1rem 3rem;
-  margin: 0.2rem 0.5rem;
-  border-radius: 0.5rem;
-  width: 21rem;
-}
-
-.input21 input {
-  padding: 1rem 2rem;
-  margin: 0.1rem 0.5rem;
-  border-radius: 0.5rem;
-  width: 10rem;
-}
-
-.menu-form button {
-  position: relative;
-  border: #FFC222 1.5px solid;
-  padding: 0.7rem 0;
-  background-color: transparent;
-  border-radius: 0.8rem;
-  width: 6rem;
-  height: 3.4rem;
-  margin: 1rem;
-  left: 16rem;
-}
-
-.menu-form button span {
-  position: relative;
-  background-color: #FFC222;
-  padding: .7rem 1.4rem;
-  text-align: center;
-  border-radius: 0.5rem;
-  font-size: large;
-  left: -1rem;
-  transition: background-color 0.2s;
-}
-
-.menu-form button span:hover {
-  background-color: #efaf0e;
-}
-
-.form-head h1 {
-  text-align: center;
-  font-weight: 100;
-  width: 9rem;
-  margin-top: 2rem;
-}
-
-.featured_dishes {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.dishes {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.featured_dishes h1 {
-  position: relative;
-  text-align: center;
-  position: relative;
-  padding: 1rem 0;
-}
-
-.featured_dishes h1::before {
-  content: '';
-  position: absolute;
-  left: 25%;
-  bottom: -5px;
-  width: 8rem;
-  border-bottom: 7px solid #FFC222;
-  border-radius: 1rem;
-}
-
-.dishes img {
-  width: 10rem;
-}
-
-.lock img {
-  position: relative;
-  width: 2rem;
-  float: right;
-  right: -1rem;
-
-}
-
-.dishes div {
-  border: 0.2rem solid #FFC222;
-  margin: 1rem;
-  padding: 1rem 3rem;
-  border-radius: 1rem;
-  height: 20rem;
-}
-
-.dishes h4 {
-  position: relative;
-  background-color: #FFC222;
-  width: 3rem;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  border-radius: 50%;
-  justify-content: center;
-  top: -0.5rem;
-  left: -2rem;
-}
-
-.dish-img {
-  position: relative;
-  background-color: rgb(241, 87, 87);
-  display: flex;
-  height: 4rem;
-  width: 10rem;
-  border-radius: 50rem;
-  top: -4rem;
-  z-index: -1;
-}
-
-.dish-content {
-  position: relative;
-  top: -3rem;
-}
-
-.feedbacks {
-  display: flex;
-  margin: 1rem 5rem;
-}
-
-.feedbacks h1 {
-  width: 15rem;
-  line-height: 3rem;
-
-}
-
-.feedbacks img {
-  width: 10rem;
-}
-
-.feedbacks-imgs {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.feedback1 {
-  position: relative;
-  top: 1rem;
-  left: -15rem;
-}
-
-.feedback2 {
-  position: relative;
-  top: -0.5rem;
-  left: -22rem;
-  background-color: rgba(247, 72, 72, 0.941);
-  border-radius: 1rem;
-  z-index: -1;
-}
-
-.feedback3 {
-  position: relative;
-  bottom: 8rem;
-  left: -10rem;
-}
-
-.feedbacks-left {
-  margin-top: 2rem;
-  width: 40%;
-  border: #FFC222 0.2rem solid;
-  border-radius: 1rem;
-  padding: 2rem;
-}
-
-.feedbacks-left p {
-  margin-bottom: 1rem;
-}
-
-.yellow {
-  position: relative;
-  float: right;
-  width: 3.5rem;
-  height: 3.5rem;
-  background-color: #FFC222;
-  border-radius: 50%;
-  top: -2rem;
-}
-
-.feedbacks-head {
-  position: relative;
-  left: 5rem;
-  top: 3rem;
-}
-
-.experts {
-  margin: 1rem 5rem;
-}
-
-.experts-imgs {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.experts-imgs img {
-  width: 15rem;
-}
-
-.experts h1 {
-  position: relative;
-  margin-bottom: 2rem;
-  text-align: center;
-}
-
-.experts h1::before {
-  content: '';
-  position: absolute;
-  left: 45%;
-  bottom: -1rem;
-  width: 8rem;
-  border-bottom: 7px solid #FFC222;
-  border-radius: 1rem;
-}
-
-.chef-details {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 0.2rem solid rgb(204, 202, 202);
-  width: 15rem;
-  height: 15rem;
-  border-radius: 50%;
-  top: -5rem;
-  background-color: white;
-}
-
-.chef-details * {
-  margin: 1rem;
-}
-
-.chef-details img {
-  width: 4rem;
-}
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
